# .vim

./: .gitignore  .luarc.json  .pre-commit-config.yaml  .taplo.toml  CLAUDE.md  README.md  clear_links.sh  create_links.sh  eslint.config.mjs  pyproject.toml  tags  update_gitignore.sh  vimrc
UltiSnips/: README  ada.snippets  all.snippets  bib.snippets  bindzone.snippets  blade.snippets  c.snippets  coffee-jasmine.snippets  coffee-react.snippets  coffee.snippets  cpp.snippets  crystal.snippets  cs.snippets  css.snippets  cuda.snippets  d.snippets  django.snippets  eelixir.snippets  elm.snippets  erlang.snippets  eruby.snippets  go.snippets  haskell.snippets  help.snippets  html.snippets  html_minimal.snippets  htmldjango.snippets  htmljinja.snippets  java.snippets  javascript-angular.snippets  javascript-ember.snippets  javascript-jasmine-arrow.snippets  javascript-jsdoc.snippets  javascript-node.snippets  javascript.snippets  jinja2.snippets  json.snippets  julia.snippets  ledger.snippets  lhaskell.snippets  (+36 more)
after/syntax/: python.vim  syncolor.vim
autoload/: vim_snippets.vim
coffee/: angular_coffee.snippets  coffee.snippets  jquery_coffee.snippets  requirejs_coffee.snippets
compiler/: mlint.vim
doc/: matlab.txt  plug.txt  tags
ftplugin/: matlab.vim  tex.vim
indent/: matlab.vim
javascript/: javascript  javascript-jasmine.snippets  javascript-jquery.snippets  javascript-react.snippets  javascript-requirejs.snippets  javascript.snippets
lua/: config.lua  eslint.lua  lua_ls.lua  pyright.lua  ruff.lua  taplo.lua
plugged/: .gitignore
plugged/vim-plug/doc/: tags
plugged/vim-snippets/snippets/: sh.snippets  tex.snippets
plugin/: author.vim  vimsnippets.vim
pythonx/: javascript_snippets.py  vimsnippets.py
snippets/: _.snippets  actionscript.snippets  ada.snippets  alpaca.snippets  angular_coffee.snippets  apache.snippets  arduino.snippets  autoit.snippets  awk.snippets  c.snippets  chef.snippets  clojure.snippets  cmake.snippets  codeigniter.snippets  coffee  coffee.snippets  cpp.snippets  crystal.snippets  cs.snippets  css.snippets  cuda.snippets  d.snippets  dart.snippets  diff.snippets  django.snippets  dosini.snippets  eelixir.snippets  elixir.snippets  elm.snippets  erlang.snippets  eruby.snippets  falcon.snippets  fortran.snippets  freemarker.snippets  go.snippets  haml.snippets  handlebars.snippets  haskell.snippets  helm.snippets  html.snippets  (+79 more)
spell/: en.utf-8.add.spl
syntax/: matlab.vim
test/: README.md  regressions.vader  run  test.vader  workflow.vader
tests/: check_lua_syntax.py  check_taplo_version.py  claude-command.lua  config.lua  eslint-lsp.lua  lua_ls-lsp.lua  pyright-lsp.lua  ruff-lsp.lua  taplo-format.lua
tests/fixtures/: formatted.toml  unformatted.js  unformatted.lua  unformatted.py  unformatted.toml
typings/: sh.pyi
typings/rich/: __init__.pyi
